Rename from openai-garmin-workout to prompt-garmin-workout

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     <script type="module" src="/src/popup/index.js"></script>
 
     <div class="popup-container">
-      <h1 class="popup-title">OpenAI Garmin Workout</h1>
+      <h1 class="popup-title">Prompt Garmin Workout</h1>
 
       <div class="section">
         <div class="section-title">
